--- a/style/style.css
+++ b/style/style.css
@@ -3,14 +3,10 @@ ul, li, h1, p, body{
     padding: 0;
 }
 
-
-
 .container {
     font-family: TT Lakes, sans-serif;
     margin: 0 auto;
 }
-
-
 
 .header {
     display: flex;
@@ -18,6 +14,7 @@ ul, li, h1, p, body{
     justify-content: space-between;
     align-items: center;
 }
+
 .header--left {
     display: flex;
     justify-content: space-between;
@@ -25,6 +22,7 @@ ul, li, h1, p, body{
     margin-left: 16px;
     gap: 16px;
 }
+
 .header--right {
     display: flex;
     justify-content: space-between;
@@ -61,19 +59,21 @@ ul, li, h1, p, body{
     display: flex;
     align-items: center;
 }
+
 .main__vert--line {
     height: 40px;
     margin-right: 12px;
     border-left: 4px solid #41F6D7;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
-
 }
+
 .main__text {
     font-size: 28px;
     text-align: left;
     align-self: center;
 }
+
 .navigation{
     display: flex;
     padding: 0 16px;
@@ -82,14 +82,16 @@ ul, li, h1, p, body{
 .navigation__list {
     list-style: none;
     display: flex;
-    overflow: hidden;
+    overflow-x: auto;
     margin-bottom: 24px;
 }
+
 .navigation__item {
     font-size: 16px;
     color: #7E7E82;
     height: 40px;
 }
+
 .navigation__item:last-child {
     margin-right: 0;
 }
@@ -103,10 +105,12 @@ ul, li, h1, p, body{
     border-radius: 6px;
     background-color: white;
 }
+
 .card{
     display: flex;
     padding-bottom: 42px;
 }
+
 .card--discription {
     margin: 0 16px;
 }
@@ -118,7 +122,6 @@ ul, li, h1, p, body{
     text-align: left;
     overflow: hidden;
     text-overflow: ellipsis;
-
 }
 
 .more {
@@ -139,7 +142,6 @@ ul, li, h1, p, body{
 .navigation__image {
     max-width: 100%;
     margin-bottom: 35px;
-
 }
 
 @font-face {
